syntax = "proto3";

option java_package = "app.vercors.launcher.core.config.proto";
option java_multiple_files = true;

message HomeProto {
  repeated HomeSectionProto sections = 1;
  HomeProviderProto provider = 2;
}

enum HomeSectionProto {
  JUMP_BACK_IN = 0;
  POPULAR_MODS = 1;
  POPULAR_MODPACKS = 2;
  POPULAR_RESOURCE_PACKS = 3;
  POPULAR_SHADER_PACKS = 4;
}

enum HomeProviderProto {
  MODRINTH = 0;
  CURSEFORGE = 1;
}